tests/machine/x/st/map_in_operator.st
" Generated by Mochi compiler v0.10.26 on 2025-07-16T17:40:19Z
"
| m |
m := Dictionary from: {1 -> 'a'. 2 -> 'b'}.
Transcript show: ((1 in m)) printString; cr.
Transcript show: ((3 in m)) printString; cr.
